test: Setup tests and test for App.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "types": [
+      "@testing-library/jest-dom"
+    ]
+  },
+  "types": ["vitest/globals"]
 }
